--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,12 @@ html::-webkit-scrollbar-thumb {
 .header .navbar a:hover {
   color: #219150;
 }
+.header .navbar #nav-close {
+  font-size: 5rem;
+  cursor: pointer;
+  color: #10222b;
+  display: none;
+}
 .header .icons a,
 .header .icons div {
   font-size: 2.5rem;
@@ -66,6 +72,54 @@ html::-webkit-scrollbar-thumb {
 .header .icons a #menu-btn,
 .header .icons div #menu-btn {
   display: none;
+}
+
+@media (max-width: 1200px) {
+  .header {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  html {
+    font-size: 55%;
+  }
+}
+@media (max-width: 768px) {
+  .header #menu-btn {
+    display: inline-block;
+  }
+  .header .navbar {
+    position: fixed;
+    top: 0;
+    left: -110%;
+    background: #fff;
+    z-index: 10000;
+    width: 35rem;
+    height: 100%;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .header .navbar.active {
+    left: 0;
+    box-shadow: 0 0 0 100vw rgba(0, 0, 0, 0.7);
+  }
+  .header .navbar a {
+    margin: 1rem 0;
+    font-size: 3rem;
+  }
+  .header .navbar #nav-close {
+    display: block;
+    position: absolute;
+    top: 1rem;
+    right: 2rem;
+  }
+}
+@media (max-width: 450px) {
+  html {
+    font-size: 50%;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
