--- a/css/style.scss
+++ b/css/style.scss
@@ -4,6 +4,8 @@
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
+    border: 0;
+    outline: 0;
     box-sizing: border-box;
     text-decoration: none;
     text-transform: capitalize;
@@ -40,6 +42,10 @@ html {
     &::-webkit-scrollbar-thumb {
         background: $black;
     }
+}
+
+section {
+    padding: 5rem 9%;
 }
 
 .header {
@@ -92,9 +98,116 @@ html {
         &:hover {
             color: $green;
         }
+    }
 
-        #menu-btn {
-            display: none;
+    #menu-btn {
+        display: none;
+    }
+
+}
+
+.search-form {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, .8);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 10000;
+    transform: translateY(-100%);
+
+    &.active {
+        transform: none;
+    }
+
+    #close-search {
+        position: absolute;
+        top: 1.5rem;
+        right: 2.5rem;
+        cursor: pointer;
+        font-size: 6rem;
+        color: $white;
+
+        &:hover {
+            color: $green;
+        }
+    }
+
+    form {
+        width: 70rem;
+        margin: 0 2rem;
+        padding-bottom: 2rem;
+        border-bottom: .2rem solid $white;
+        display: flex;
+        align-items: center;
+
+        input {
+            width: 100%;
+            font-size: 2rem;
+            color: $white;
+            background: none;
+            text-transform: none;
+            padding-right: 2rem;
+            padding-left: .1rem;
+
+            &::placeholder {
+                color: #aaa;
+            }
+        }
+
+        label {
+            font-size: 3rem;
+            cursor: pointer;
+            color: $white;
+
+            &:hover {
+                color: $green;
+            }
+        }
+    }
+}
+
+.home {
+    padding: 0;
+
+    .box {
+        min-height: 100vh;
+        display: flex;
+        align-items: center;
+        background-size: cover !important;
+        background-position: center !important;
+        justify-content: flex-end;
+        padding: 2rem 9%;
+
+        &.second {
+            justify-content: flex-start;
+        }
+
+        .content {
+            width: 50rem;
+
+            span {
+                font-size: 4rem;
+                color: $black;
+            }
+
+            h3 {
+                font-size: 6rem;
+                color: $green;
+                padding-top: .5rem;
+                text-transform: uppercase;
+            }
+
+            p{
+                line-height: 2;
+                color: $black;
+                font-size: 1.5rem;
+              
+            }
+
         }
     }
 }
@@ -103,6 +216,10 @@ html {
 
     .header {
         padding: 2rem;
+    }
+
+    section {
+        padding: 3rem 2rem;
     }
 
 }
@@ -138,7 +255,7 @@ html {
 
             &.active {
                 left: 0;
-                box-shadow: 0 0 0 100vw rgba(0, 0, 0, .7);
+                box-shadow: 0 0 0 100vw rgba(0, 0, 0, .8);
             }
 
             a {
