--- a/css/style.css
+++ b/css/style.css
@@ -182,6 +182,7 @@ section {
   line-height: 2;
   color: #10222b;
   font-size: 1.5rem;
+  padding: 1rem 0;
 }
 
 .swiper-button-next::after,
@@ -201,6 +202,23 @@ section {
 @media (max-width: 991px) {
   html {
     font-size: 55%;
+  }
+  .home .box {
+    padding: 0 4rem;
+    justify-content: center;
+    background-position: right !important;
+  }
+  .home .box.second {
+    background-position: left !important;
+  }
+  .content {
+    text-align: center;
+  }
+  .content span {
+    font-size: 3rem;
+  }
+  .content h3 {
+    font-size: 4rem;
   }
 }
 @media (max-width: 768px) {
@@ -233,6 +251,10 @@ section {
     position: absolute;
     top: 1rem;
     right: 2rem;
+  }
+  .swiper-button-next::after,
+  .swiper-button-prev::after {
+    display: none;
   }
 }
 @media (max-width: 450px) {
