--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,13 @@ section {
   background-color: #10222b;
 }
 
+.heading {
+  text-align: center;
+  margin-bottom: 2.7rem;
+  font-size: 4rem;
+  color: #10222b;
+}
+
 .header {
   position: fixed;
   top: 0;
@@ -55,6 +62,10 @@ section {
   z-index: 1000;
   display: flex;
   align-items: center;
+}
+.header.active {
+  background-color: #fff;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
 }
 .header .logo {
   margin-right: auto;
@@ -189,6 +200,31 @@ section {
 .swiper-button-prev::after {
   font-size: 2rem !important;
   color: #10222b;
+}
+
+.category .box-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(29rem, 1fr));
+  gap: 1.5rem;
+}
+.category .box-container .box {
+  text-align: center;
+  padding: 1rem;
+}
+.category .box-container .box img {
+  height: 20rem;
+  width: 20rem;
+  border-radius: 50%;
+}
+.category .box-container .box h3 {
+  font-size: 2rem;
+  color: #219150;
+}
+.category .box-container .box p {
+  font-size: 1.6rem;
+  color: #10222b;
+  padding: 1rem 0;
+  line-height: 2;
 }
 
 @media (max-width: 1200px) {
