--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ html {
   font-size: 62.5%;
   overflow-x: hidden;
   scroll-behavior: smooth;
-  scroll-padding-bottom: 5rem;
+  scroll-padding-top: 7rem;
 }
 html::-webkit-scrollbar {
   width: 1rem;
@@ -28,7 +28,7 @@ html::-webkit-scrollbar-thumb {
 }
 
 section {
-  padding: 5rem 9%;
+  padding: 3rem 9%;
 }
 
 .btn {
@@ -48,7 +48,7 @@ section {
 
 .heading {
   text-align: center;
-  margin-bottom: 2.8rem;
+  margin-bottom: 3rem;
   font-size: 4rem;
   color: #10222b;
 }
@@ -318,6 +318,64 @@ section {
 .shop .swiper-button-next,
 .shop .swiper-button-prev {
   top: 45% !important;
+}
+
+.packages {
+  background: #eee;
+}
+.packages .box-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(32rem, 1fr));
+  gap: 1.5rem;
+}
+.packages .box-container .box {
+  text-align: center;
+  background: #fff;
+  border: 0.1rem solid #10222b;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+}
+.packages .box-container .box:hover {
+  background: #10222b;
+}
+.packages .box-container .box:hover .content > * {
+  color: #fff;
+}
+.packages .box-container .box:hover .btn {
+  border-color: #fff;
+}
+.packages .box-container .box:hover .btn:hover {
+  background-color: #fff;
+  color: #10222b;
+}
+.packages .box-container .box .image {
+  height: 25rem;
+  overflow: hidden;
+  padding: 2rem;
+  padding-bottom: 0;
+  border-radius: 0.5rem;
+}
+.packages .box-container .box .image img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 0.5rem;
+}
+.packages .box-container .box .content {
+  padding: 2rem;
+}
+.packages .box-container .box .content h3 {
+  font-size: 2rem;
+  color: #10222b;
+}
+.packages .box-container .box .content p {
+  font-size: 1.5rem;
+  color: #10222b;
+  padding: 1rem 0;
+  line-height: 2;
+}
+.packages .box-container .box .content .price {
+  font-size: 2rem;
+  color: #219150;
 }
 
 @media (max-width: 1200px) {
