--- a/css/style.scss
+++ b/css/style.scss
@@ -29,7 +29,7 @@ html {
     font-size: 62.5%;
     overflow-x: hidden;
     scroll-behavior: smooth;
-    scroll-padding-bottom: 5rem;
+    scroll-padding-top: 7rem;
 
     &::-webkit-scrollbar {
         width: 1rem;
@@ -45,7 +45,7 @@ html {
 }
 
 section {
-    padding: 5rem 9%;
+    padding: 3rem 9%;
 }
 
 .btn {
@@ -66,7 +66,7 @@ section {
 
 .heading {
     text-align: center;
-    margin-bottom: 2.8rem;
+    margin-bottom: 3rem;
     font-size: 4rem;
     color: $black;
 }
@@ -388,6 +388,76 @@ section {
     }
 }
 
+.packages {
+
+    background: $light-bg;
+
+    .box-container {
+        @include grid(32rem);
+
+        .box {
+            text-align: center;
+            background: $white;
+            border: $border;
+            box-shadow: $box-shadow;
+
+            &:hover {
+                background: $black;
+
+                .content>* {
+                    color: $white;
+                }
+
+                .btn {
+                    border-color: $white;
+
+                    &:hover {
+                        background-color: $white;
+                        color: $black;
+                    }
+                }
+            }
+
+            .image {
+                height: 25rem;
+                overflow: hidden;
+                padding: 2rem;
+                padding-bottom: 0;
+                border-radius: .5rem;
+
+                img {
+                    height: 100%;
+                    width: 100%;
+                    object-fit: cover;
+                    border-radius: .5rem;
+                }
+            }
+
+            .content {
+                padding: 2rem;
+
+                h3 {
+                    font-size: 2rem;
+                    color: $black;
+                }
+
+                p {
+                    font-size: 1.5rem;
+                    color: $black;
+                    padding: 1rem 0;
+                    line-height: 2;
+                }
+
+                .price {
+                    font-size: 2rem;
+                    color: $green;
+                }
+            }
+        }
+    }
+
+}
+
 @media (max-width: 1200px) {
 
     .header {
@@ -499,7 +569,7 @@ section {
         font-size: 50%;
     }
 
-    .heading{
+    .heading {
         font-size: 3rem;
     }
 
