--- a/css/style.scss
+++ b/css/style.scss
@@ -458,6 +458,62 @@ section {
 
 }
 
+.services {
+    background: $white;
+
+    .box-container {
+        @include grid(31rem);
+
+        .box {
+            text-align: center;
+            padding: 2rem;
+            border: $border;
+            border-radius: .5rem;
+            background-color: $white;
+
+            &:hover {
+                background-color: $black;
+
+                p {
+                    color: $white;
+                }
+
+                a {
+                    border-color: $white;
+                    color: white;
+                }
+
+                img{
+                    filter: invert(1);
+                }
+
+            }
+
+            .btn:hover {
+                background-color: $white;
+                color: $black;
+            }
+
+            img {
+                height: 10rem;
+                margin-bottom: 1rem;
+            }
+
+            h3 {
+                font-size: 2rem;
+                color: $green;
+            }
+
+            p {
+                font-size: 1.5rem;
+                color: $black;
+                padding: 1rem 0;
+                line-height: 2;
+            }
+        }
+    }
+}
+
 @media (max-width: 1200px) {
 
     .header {
