--- a/css/style.css
+++ b/css/style.css
@@ -378,6 +378,53 @@ section {
   color: #219150;
 }
 
+.services {
+  background: #fff;
+}
+.services .box-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(31rem, 1fr));
+  gap: 1.5rem;
+}
+.services .box-container .box {
+  text-align: center;
+  padding: 2rem;
+  border: 0.1rem solid #10222b;
+  border-radius: 0.5rem;
+  background-color: #fff;
+}
+.services .box-container .box:hover {
+  background-color: #10222b;
+}
+.services .box-container .box:hover p {
+  color: #fff;
+}
+.services .box-container .box:hover a {
+  border-color: #fff;
+  color: white;
+}
+.services .box-container .box:hover img {
+  filter: invert(1);
+}
+.services .box-container .box .btn:hover {
+  background-color: #fff;
+  color: #10222b;
+}
+.services .box-container .box img {
+  height: 10rem;
+  margin-bottom: 1rem;
+}
+.services .box-container .box h3 {
+  font-size: 2rem;
+  color: #219150;
+}
+.services .box-container .box p {
+  font-size: 1.5rem;
+  color: #10222b;
+  padding: 1rem 0;
+  line-height: 2;
+}
+
 @media (max-width: 1200px) {
   .header {
     padding: 2rem;
