--- a/css/style.scss
+++ b/css/style.scss
@@ -458,8 +458,67 @@ section {
 
 }
 
+.reviews {
+
+    .slide {
+
+        .text {
+            padding: 2rem;
+            font-size: 1.5rem;
+            font-style: italic;
+            word-wrap: break-word;
+            background: $light-bg;
+            border-radius: .5rem;
+            height: 24rem;
+            color: $black;
+            position: relative;
+            line-height: 2;
+            z-index: 0;
+            margin-bottom: 3rem;
+            
+            &::before {
+                content: ('');
+                position: absolute;
+                width: 3rem;
+                height: 3rem;
+                bottom: -1.5rem;
+                left: .7rem;
+                background: $light-bg;
+                transform: rotate(45deg);
+            }
+        }
+
+        .user {
+            display: flex;
+            align-items: center;
+            gap: 1.8rem;
+
+            img {
+                height: 7rem;
+                width: 7rem;
+                border-radius: 50%;
+            }
+
+            .info {
+
+                h3{
+                    font-size: 2rem;
+                    color: $black;
+                }
+
+                span {
+                    color: $green;
+                    font-size: 1.5rem;
+                }
+
+            }
+        }
+
+    }
+}
+
 .services {
-    background: $white;
+    background: $light-bg;
 
     .box-container {
         @include grid(31rem);
@@ -483,7 +542,7 @@ section {
                     color: white;
                 }
 
-                img{
+                img {
                     filter: invert(1);
                 }
 
