--- a/css/style.scss
+++ b/css/style.scss
@@ -466,13 +466,11 @@ section {
             padding: 2rem;
             font-size: 1.5rem;
             font-style: italic;
-            word-wrap: break-word;
-            background: $light-bg;
+            background: #eee;
             border-radius: .5rem;
-            height: 24rem;
-            color: $black;
-            position: relative;
+            color: #10221b;
             line-height: 2;
+            position: relative;
             z-index: 0;
             margin-bottom: 3rem;
             
