--- a/css/style.scss
+++ b/css/style.scss
@@ -718,6 +718,7 @@ section {
 
             .email {
                 text-transform: lowercase;
+                white-space: nowrap;
             }
 
             a {
